# ncaa-basketball-analytics

./: .gitignore  .pre-commit-config.yaml  ESPN_API_REFACTORING.md  PR_CHECKLIST.md  Packing List.md  SUMMARY.md  docker-compose.yml  games_test.json  mkdocs.yml  pyproject.toml  pytest.ini  setup.py  setup_airflow_test_env.sh  test_player_stats_refactored.py
airflow/: README.md  requirements.txt
airflow/config/: production_variables.json  variables.json
airflow/dags/: data_collection_dag.py  feature_engineering_dag.py  model_training_dag.py  prediction_dag.py
airflow/hooks/: duckdb_hook.py
airflow/operators/: espn_operators.py
airflow/sensors/: data_sensors.py
airflow/utils/: alerting_utils.py  logging_utils.py
config/: db_config.yaml
config/api/: espn.yaml
config/examples/: config.development.yaml  config.production.yaml  config.yaml
dags/: README.md  data_collection_dag.py  evaluation_dag.py  model_training_dag.py  prediction_dag.py
data/: ncaa_basketball.duckdb
data/metadata/: espn_metadata.json
docs/: api-documentation.md  index.md
docs/api/: index.md
docs/architecture/: airflow-workflows.md  config-management.md  data-table-structures.md  development-phases.md  feature-engineering.md  index.md  logging-strategy.md  model-architecture.md  model-training.md  project-structure.md  tech-stack.md
docs/development/: phase01-mvp.md  phase1-mvp.md
docs/guides/: adding-features.md  config-migration.md  configuration.md  environments.md  getting-started.md  index.md  mlflow-usage.md  model-deployment.md  model-evaluation.md  model-training.md  modeling_usage.md  training-models.md  troubleshooting.md
docs/models/: performance-reference.md
examples/: README.md  configuration_example.py  data_storage_example.py  espn_api_example.py  feature_framework_example.py
mlruns/0/: meta.yaml
src/config/: __init__.py  base.py  environment.py  loader.py  loaders.py  models.py  validation.py  versioning.py
src/dashboard/: README.md  __main__.py  app.py  server.py
src/features/: base.py  dependencies.py  game_features.py  player_features.py  registry.py  team_features.py  versioning.py
src/models/: __init__.py  base.py
src/predictions/: __init__.py  main.py  upcoming_games.py
tests/: conftest.py  conftest_fixtures.py
tests/airflow/: test_pipeline_integration.py
tests/config/: __init__.py  test_environment.py  test_loader.py  test_validation.py  test_versioning.py
tests/features/: test_base.py  test_dependencies.py  test_game_features.py  test_player_features.py  test_registry.py  test_storage.py  test_team_features.py
tests/models/: test_base.py  test_evaluation.py  test_training.py
tests/predictions/: test_accuracy.py  test_data_preparation.py  test_formatting.py  test_prediction.py  test_upcoming_games.py  test_workflow.py
tests/visualization/: test_app.py  test_layouts.py
(+181 files in other folders)
