[project]
name = "ncaa-basketball-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "apache-airflow>=2.10.5",
    "dash>=3.0.1",
    "duckdb>=1.2.1",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.8",
    "mlflow>=2.21.1",
    "polars>=1.26.0",
    "pre-commit>=4.2.0",
    "tenacity>=9.0.0",
    "torch>=2.6.0",
]
